# glue-dev-env

./: .dockerignore  .env  .gitignore  Dockerfile  README.md  dockerfile  pyproject.toml  run.sh
.devcontainer/: .bashrc  Dockerfile  attach.sh  create.sh  devcontainer.json
.github/workflows/: test.yaml
app/: __init__.py  glue_job.py
app/pipeline/: __init__.py  config.py  helpers.py  report.py
app/pipeline/steps/: cleanup.py  load.py  persist.py  process.py  schema.py
tests/: conftest.py  test_glue_job.py  test_pipeline.py
