[tool.poetry]
name = "devcontainer-glue-env"
version = "0.1.0"
description = "Dev container template for AWS Glue jobs"
authors = ["bcbazevedo <bcbazevedo@gmail.com>"]
readme = "README.md"
packages = [{ include = "app" }]

[tool.poetry.dependencies]
python = "^3.10"
boto3 = "*"
moto = "*"
awswrangler = "*"
toolz = "*"

[tool.poetry.group.dev.dependencies]
chispa = "^0.9.2"
flake8 = "^6.0.0"
flake8-black = "^0.3.6"
black = "^23.1.0"
isort = "^5.12.0"
pytest = "^7.2.2"
python-dotenv = "^1.0.0"
boto3 = "*"
moto = "*"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
